fix: use pre-wrap instead of pre for white-space
The previous configuration was avoiding css line-breaks (for width)

--- a/blog-user/src/components/post/Post.module.css
+++ b/blog-user/src/components/post/Post.module.css
@@ -29,7 +29,7 @@
 }
 
 .postContent {
-  white-space: pre;
+  white-space: pre-wrap;
   font-size: 2rem;
   font-family: 'Afacad', 'Raleway', system-ui, -apple-system, BlinkMacSystemFont,
     'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
